; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/sdp/extr_sdp_api.c_SDP_GetNumDiRecords.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/sdp/extr_sdp_api.c_SDP_GetNumDiRecords.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@UUID_SERVCLASS_PNP_INFORMATION = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @SDP_GetNumDiRecords(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  store i64 0, i64* %3, align 8
  store i32* null, i32** %4, align 8
  br label %5

5:                                                ; preds = %16, %1
  %6 = load i32*, i32** %2, align 8
  %7 = load i32, i32* @UUID_SERVCLASS_PNP_INFORMATION, align 4
  %8 = load i32*, i32** %4, align 8
  %9 = call i32* @SDP_FindServiceInDb(i32* %6, i32 %7, i32* %8)
  store i32* %9, i32** %4, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %12, label %15

12:                                               ; preds = %5
  %13 = load i64, i64* %3, align 8
  %14 = add nsw i64 %13, 1
  store i64 %14, i64* %3, align 8
  br label %15

15:                                               ; preds = %12, %5
  br label %16

16:                                               ; preds = %15
  %17 = load i32*, i32** %4, align 8
  %18 = icmp ne i32* %17, null
  br i1 %18, label %5, label %19

19:                                               ; preds = %16
  %20 = load i64, i64* %3, align 8
  ret i64 %20
}

declare dso_local i32* @SDP_FindServiceInDb(i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
